--- a/Components/src/Buttons/Button1.css
+++ b/Components/src/Buttons/Button1.css
@@ -11,6 +11,7 @@
     font-size: 22px;
     font-weight: 500;
     height: 3rem;
+    width:10rem;
     padding: 0 1.2rem;
     margin: 1rem;
     text-align: center;
